@@ -480,10 +480,11 @@ public class EntityEditor extends MultiPageDatabaseEditor
                     Map<String, Object> options = new HashMap<>();
                     options.put(DBPScriptObject.OPTION_OBJECT_SAVE, true);
 
+                    DBPDataSource dataSource = getDatabaseObject().getDataSource();
                     try {
                         DBEPersistAction[] persistActions = command.getPersistActions(monitor, options);
                         script.append(SQLUtils.generateScript(
-                            commandContext.getExecutionContext().getDataSource(),
+                            dataSource,
                             persistActions,
                             false));
                     } catch (DBException e) {
@@ -543,7 +544,7 @@ public class EntityEditor extends MultiPageDatabaseEditor
         // Command listener
         commandListener = new DBECommandAdapter() {
             @Override
-            public void onCommandChange(DBECommand command)
+            public void onCommandChange(DBECommand<?> command)
             {
                 UIUtils.syncExec(() -> firePropertyChange(IEditorPart.PROP_DIRTY));
             }
@@ -828,12 +829,11 @@ public class EntityEditor extends MultiPageDatabaseEditor
         }
     }
 
-    private void addActionsContributor(IEditorPart editor, Class<? extends IEditorActionBarContributor> contributorClass) throws InstantiationException, IllegalAccessException
-    {
+    private void addActionsContributor(IEditorPart editor, Class<? extends IEditorActionBarContributor> contributorClass) throws Exception {
         GlobalContributorManager contributorManager = GlobalContributorManager.getInstance();
         IEditorActionBarContributor contributor = contributorManager.getContributor(contributorClass);
         if (contributor == null) {
-            contributor = contributorClass.newInstance();
+            contributor = contributorClass.getDeclaredConstructor().newInstance();
         }
         contributorManager.addContributor(contributor, editor);
         actionContributors.put(editor, contributor);
@@ -1116,6 +1116,11 @@ public class EntityEditor extends MultiPageDatabaseEditor
             log.error(e);
             return false;
         }
+    }
+
+    @Override
+    public boolean isRelationalObject(DBSObject object) {
+        return true;
     }
 
 }
